@@ -19,7 +19,7 @@
 package org.netbeans.modules.maven.hints.pom;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.prefs.Preferences;
@@ -39,6 +39,7 @@ import org.netbeans.modules.maven.model.pom.POMExtensibilityElement;
 import org.netbeans.modules.maven.model.pom.POMModel;
 import org.netbeans.modules.maven.model.pom.POMQName;
 import org.netbeans.modules.maven.model.pom.Plugin;
+import org.netbeans.modules.maven.model.pom.PluginContainer;
 import org.netbeans.modules.maven.model.pom.PluginExecution;
 import org.netbeans.modules.maven.model.pom.Properties;
 import org.netbeans.spi.editor.hints.ChangeInfo;
@@ -78,7 +79,7 @@ public class UseReleaseOptionHint implements POMErrorFixProvider {
     public List<ErrorDescription> getErrorsForDocument(POMModel model, Project prj) {
 
         if (prj == null) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         // no hints if plugin was downgraded
@@ -87,7 +88,7 @@ public class UseReleaseOptionHint implements POMErrorFixProvider {
             // note: this is the embedded plugin version, only useful for downgrade checks
             String pluginVersion = PluginPropertyUtils.getPluginVersion(nbproject.getMavenProject(), Constants.GROUP_APACHE_PLUGINS, Constants.PLUGIN_COMPILER);
             if (pluginVersion != null && new ComparableVersion(pluginVersion).compareTo(COMPILER_PLUGIN_VERSION) <= 0) {
-                return Collections.emptyList();
+                return List.of();
             }
         }
 
@@ -97,18 +98,24 @@ public class UseReleaseOptionHint implements POMErrorFixProvider {
 
         boolean releaseSupportedByDeclaredPlugin = false;
 
-        if (build != null && build.getPlugins() != null) {
-            Optional<Plugin> compilerPlugin = build.getPlugins().stream()
-                    .filter((p) -> "maven-compiler-plugin".equals(p.getArtifactId()))
-                    .filter(this::isPluginCompatible)
-                    .findFirst();
+        if (build != null) {
 
-            if (compilerPlugin.isPresent()) {
-                releaseSupportedByDeclaredPlugin = true;
-                hints.addAll(createHintsForParent("", compilerPlugin.get().getConfiguration()));
-                if (compilerPlugin.get().getExecutions() != null) {
-                    for (PluginExecution exec : compilerPlugin.get().getExecutions()) {
-                        hints.addAll(createHintsForParent("", exec.getConfiguration()));
+            for (PluginContainer pc : Arrays.asList(build, build.getPluginManagement())) {
+                if (pc == null || pc.getPlugins() == null) {
+                    continue;
+                }
+                Optional<Plugin> compilerPlugin = pc.getPlugins().stream()
+                        .filter(p -> Constants.PLUGIN_COMPILER.equals(p.getArtifactId()))
+                        .filter(this::isPluginCompatible)
+                        .findFirst();
+
+                if (compilerPlugin.isPresent()) {
+                    releaseSupportedByDeclaredPlugin |= true;
+                    hints.addAll(createHintsForParent("", compilerPlugin.get().getConfiguration()));
+                    if (compilerPlugin.get().getExecutions() != null) {
+                        for (PluginExecution exec : compilerPlugin.get().getExecutions()) {
+                            hints.addAll(createHintsForParent("", exec.getConfiguration()));
+                        }
                     }
                 }
             }
@@ -118,7 +125,7 @@ public class UseReleaseOptionHint implements POMErrorFixProvider {
         if (!releaseSupportedByDeclaredPlugin) {
             ComparableVersion mavenVersion = PomModelUtils.getActiveMavenVersion();
             if (mavenVersion == null || mavenVersion.compareTo(MAVEN_VERSION) <= 0) {
-                return Collections.emptyList();
+                return List.of();
             }
         }
 
@@ -133,7 +140,7 @@ public class UseReleaseOptionHint implements POMErrorFixProvider {
     private List<ErrorDescription> createHintsForParent(String prefix, POMComponent parent) {
 
         if (parent == null) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         int source;
@@ -162,10 +169,10 @@ public class UseReleaseOptionHint implements POMErrorFixProvider {
             }
         } catch (NumberFormatException ignored) {
             // if source or target is invalid or missing
-            return Collections.emptyList();
+            return List.of();
         }
 
-        if (source == target && source >= 9) {
+        if (source == target && source >= 8) { // ok since 3.13.0+ maps release to source/target on 8
             List<ErrorDescription> hints = new ArrayList<>();
             for (POMComponent prop : parent.getChildren()) {
                 String name = prop.getPeer().getNodeName();
@@ -175,12 +182,12 @@ public class UseReleaseOptionHint implements POMErrorFixProvider {
             }
             return hints;
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     private ErrorDescription createHintForComponent(String prefix, POMComponent component, POMModel model, String release) {
         Line line = NbEditorUtilities.getLine(model.getBaseDocument(), component.findPosition(), false);
-        List<Fix> fix = Collections.singletonList(new ConvertToReleaseOptionFix(prefix, release, component));
+        List<Fix> fix = List.of(new ConvertToReleaseOptionFix(prefix, release, component));
         return ErrorDescriptionFactory.createErrorDescription(Severity.HINT, FIX_UseReleaseVersionHint(), fix, model.getBaseDocument(), line.getLineNumber()+1);
     }
 
@@ -190,7 +197,7 @@ public class UseReleaseOptionHint implements POMErrorFixProvider {
     private boolean isPluginCompatible(Plugin plugin) {
         String version = plugin.getVersion();
         if (version == null || version.isEmpty()) {
-            return false;
+            return true; // plugin management, lets assume that it is compatible
         }
         return new ComparableVersion(version).compareTo(COMPILER_PLUGIN_VERSION) >= 0;
     }
